--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>br.com.bluesoft</groupId>
     <artifactId>bluesoft-stream-processor</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
 
     <dependencies>
         <dependency>
@@ -41,7 +39,8 @@
         <connection>scm:git:git@bitbucket.org:bluesoftbr/edi-parser.git</connection>
         <developerConnection>scm:git:git@bitbucket.org:bluesoftbr/edi-parser.git</developerConnection>
         <url>git@bitbucket.org:bluesoftbr/edi-parser.git</url>
-    </scm>
+      <tag>bluesoft-stream-processor-1.0.0</tag>
+  </scm>
 
     <build>
         <plugins>
